# 1c_task

./: .gitignore  CMakeLists.txt  README.md  course.csv
src/: CourseTable.cpp  CourseTable.h  main.cpp
